Fri Mar 31 15:17:51 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/included.idl:
        * tests/IDL_Test/including.idl:

          Added valuetype IDL example that is declared in one file, which
          is included in another where the valuetype is used in a sequence.
          This example tests whether the inclusion of Value_VarOut_T.h
          occurs soon enough in the translation unit to be seen when the
          sequence template class is instantiated, and to make sure the
          change in

          Thu Mar 30 20:21:53 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

          survives when the TAO sequence overhaul is integrated.

Fri Mar 31 11:13:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Processing_Mode_Policy/Remote/run_test.pl:
          Check the return value of the spawn of the server and don't try
          to also run the client on the vxworks target, the server is the
          side of the test that runs there

Fri Mar 31 11:07:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/POA/Adapter_Activator/run_test.pl:
        * examples/POA/Default_Servant/run_test.pl:
        * examples/POA/Explicit_Activation/run_test.pl:
        * examples/POA/Loader/run_test.pl:
        * examples/POA/On_Demand_Activation/run_test.pl:
        * examples/POA/On_Demand_Loading/run_test.pl:
        * examples/POA/Reference_Counted_Servant/run_test.pl:
          Check the return value of the spawn of the server, if this is
          not equal zero just exit directly. Speeds up the tests when
          there are no executables build

Fri Mar 31 11:03:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Wait_On_Read.cpp:
          Use false instead of 0 for a bool

Thu Mar 30 20:21:53 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Valuetype/Sequence_T.h:

          Added include of Value_VarOut_T.h, needed when compiling